--- a/project/html/info.html
+++ b/project/html/info.html
@@ -32,8 +32,8 @@
 
     <div class="opisI">
         <h1>* * *</h1>
-        <p>Michał Prelich<br>
-            nr 380970<br>
+        <p>Michał<br>
+            <br>
             Podstawy Technologii Internetowych<br>
             zima 2019/2020
         </p>
