add google maps

--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>KN: strona g≈Ç√≥wna</title>
+    <title>KN: strona g≥Ûwna</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
     <link rel='stylesheet' href='css/style.css'/>
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="pasek">
         <span class="pasekWew aktywny">
-            <a href="#">strona g≈Ç√≥wna</a>
+            <a href="#">strona g≥Ûwna</a>
         </span>
         <span class="pasekWew">
             <a href="html/menu.html">menu</a>
@@ -28,8 +28,8 @@
     <div class="divObraz divI">
         <span class="obrazNapis">kawiarnia<br>nocna</span>
         <span class="obrazNapis2">czynne codziennie: 12:00 - 24:00</span>
-        <span class="obrazNapis3">≈Ç√≥d≈∫, jaracza 1</span>
-        <img src="img/gimg2.jpg" alt="OBRAZ">
+        <span class="obrazNapis3">≥Ûdü, jaracza 1</span>
+        <img src="img/gimg.jpg" alt="OBRAZ">
     </div>
 
 	<div class="opis">
@@ -40,18 +40,21 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
+        <p>
+            Integer neque ante, sagittis odio consequat id, vulputate adipiscing. Vestibulum dapibus vel, pellentesque eget, sollicitudin posuere, nibh massa imperdiet dignissim eu, urna. Aenean ligula. Vivamus fermentum libero auctor tortor massa et magnis dis parturient montes, nascetur ridiculus mus. Integer metus nonummy justo at porttitor tempus. In hac habitasse platea dictumst. Cum sociis natoque penatibus et turpis. Etiam vel urna a elit. Sed nec egestas volutpat. Nam laoreet urna. Aenean urna quis ante. Vestibulum aliquam quis, lorem. Vestibulum consectetuer adipiscing felis sed felis. Fusce venenatis quis, tincidunt nulla. Maecenas in massa. Nulla interdum mi ornare eu, ornare a, vestibulum vel, adipiscing ornare. Nam varius risus nisl, blandit eros, dapibus aliquam. In hac habitasse platea dictumst. Vestibulum enim. Duis consequat lobortis condimentum dignissim. Donec ut lacus lacus malesuada aliquet, purus sit amet leo. Suspendisse sapien. Aliquam erat ac eros quis mauris luctus eu, aliquet nulla.
+        </p>
     </div>
 
     <div class="obrazy">
         <div class="obraz">
             <img src="img/o1.jpg" alt="o1"/>
             <p class="imie">Maciek</p>
-            <p>w≈Ça≈õciciel</p>
+            <p>w≥aúciciel</p>
         </div>
         <div class="obraz">
             <img src="img/o2.jpg" alt="o2"/>
             <p class="imie">Maciej</p>
-            <p>g≈Ç√≥wny barista</p>
+            <p>g≥Ûwny barista</p>
         </div>
         <div class="obraz">
             <img src="img/o3.jpg" alt="o3"/>
@@ -59,9 +62,12 @@
             <p>barista</p>
         </div>
     </div>
-    
+
+    <div class="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2468.834149494073!2d19.454186215779732!3d51.7726390796795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471bcad6e5ca4d6d%3A0x91210b98c00374c4!2zU3RlZmFuYSBKYXJhY3phIDEsIDkwLTAwMSDFgcOzZMW6!5e0!3m2!1spl!2spl!4v1579464212542!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    </div>
 	<footer>
-		Micha≈Ç Prelich, PTI 2019/2020
+		Micha≥ Prelich, PTI 2019/2020
 	</footer>
 
 </body>
