--- a/project/html/menu.html
+++ b/project/html/menu.html
@@ -12,7 +12,7 @@
 <body>
     <div class="pasek">
         <span class="pasekWew">
-            <a href="../index.html">strona g≈Ç√≥wna</a>
+            <a href="../index.html">strona g≥Ûwna</a>
         </span>
         <span class="pasekWew aktywny">
             <a href="#">menu</a>
@@ -27,7 +27,7 @@
 
     <div class="divObraz divM">
         <span class="obrazNapis">m e n u</span>
-        <img src="../img/gimg2.jpg" alt="obraz">
+        <img src="../img/gimg.jpg" alt="obraz">
     </div>
 
 	<div class="opis">
@@ -36,31 +36,31 @@
             <tbody>
                 <tr>
                     <td> czarna</td>
-                    <td> 10</td>
+                    <td> 10 z≥</td>
                 </tr>
                 <tr>
-                    <td> bia≈Ça</td>
-                    <td> 11</td>
+                    <td> bia≥a</td>
+                    <td> 11 z≥</td>
                 </tr>
                 <tr>
                     <td> cappuccino</td>
-                    <td> 11</td>
+                    <td> 11 z≥</td>
                 </tr>
                 <tr>
                     <td> lorem</td>
-                    <td> 32</td>
+                    <td> 32 z≥</td>
                 </tr>
                 <tr>
                     <td> ipsum</td>
-                    <td> 21</td>
+                    <td> 2 z≥</td>
                 </tr>
                 <tr>
                     <td> americana</td>
-                    <td> 9</td>
+                    <td> 9 z≥</td>
                 </tr>
                 <tr>
                     <td> latte</td>
-                    <td> 15</td>
+                    <td> 15 z≥</td>
                 </tr>
             </tbody>
         </table>
@@ -69,34 +69,34 @@
             <tbody>
                 <tr>
                     <td> czarna</td>
-                    <td> 3</td>
+                    <td> 3 z≥</td>
                 </tr>
                 <tr>
                     <td> zielona</td>
-                    <td> 4</td>
+                    <td> 4 z≥</td>
                 </tr>
                 <tr>
-                    <td> z cytrynƒÖ</td>
-                    <td> 6</td>
+                    <td> z cytrynπ</td>
+                    <td> 1 z≥</td>
                 </tr>
                 <tr>
                     <td> z mlekiem</td>
-                    <td> 6</td>
+                    <td> 6 z≥</td>
                 </tr>
                 <tr>
                     <td> owocowa</td>
-                    <td> 5</td>
+                    <td> 5 z≥</td>
                 </tr>
                 <tr>
                     <td> lorem</td>
-                    <td> 4</td>
+                    <td> 4 z≥</td>
                 </tr>
             </tbody>
         </table>
     </div>
 
 	<footer>
-		Micha≈Ç Prelich, PTI 2019/2020
+		Micha≥ Prelich, PTI 2019/2020
 	</footer>
 	
 </body>
