add download link

--- a/project/html/info.html
+++ b/project/html/info.html
@@ -12,7 +12,7 @@
 <body>
     <div class="pasek">
         <span class="pasekWew">
-            <a href="../index.html">strona g≈Ç√≥wna</a>
+            <a href="../index.html">strona g≥Ûwna</a>
         </span>
         <span class="pasekWew">
             <a href="menu.html">menu</a>
@@ -27,28 +27,38 @@
 
     <div class="divObraz divM">
         <span class="obrazNapis">i n f o</span>
-        <img src="../img/gimg2.jpg" alt="obraz">
+        <img src="../img/gimg.jpg" alt="obraz">
     </div>
 
     <div class="opisI">
         <h1>* * *</h1>
-        <p>Micha≈Ç<br>
-            <br>
+        <p>
+            Micha≥ Prelich<br>
+            nr 380970<br>
             Podstawy Technologii Internetowych<br>
             zima 2019/2020
         </p>
         <h1>* * *</h1>
-        <p>Testy<br>
-            Win10, Firefox 70.0.1<br>
+        <p>
+            Testy<br>
+            Windows 10, Firefox 70.0.1<br>
             Android 7, Chrome 79.0
+        </p>
+        <h1>* * *</h1>
+        <p>Specyfikacja<br>
+        <p><a href="../Specyfikacja.pdf" download>&gt; Pobierz PDF &lt;</a></p>
+        </p>
+        <h1>* * *</h1>
+        <p> 
+            èrÛd≥a<br>
+            unsplash.com
         </p>
         <h1>* * *</h1>
     </div>
 
 	<footer>
-		Micha≈Ç Prelich, PTI 2019/2020
+		Micha≥ Prelich, PTI 2019/2020
 	</footer>
 	
-    <script async src="js/index.js"></script>
 </body>
 </html>
