--- a/project/index.html
+++ b/project/index.html
@@ -67,7 +67,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2468.834149494073!2d19.454186215779732!3d51.7726390796795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471bcad6e5ca4d6d%3A0x91210b98c00374c4!2zU3RlZmFuYSBKYXJhY3phIDEsIDkwLTAwMSDFgcOzZMW6!5e0!3m2!1spl!2spl!4v1579464212542!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
 	<footer>
-		Micha³ Prelich, PTI 2019/2020
+		PTI 2019/2020
 	</footer>
 
 </body>
